added 4 buttons to index, updated btn to css, and added a line of code to app.js

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     </div>
 
     <div class="container-Div2">
-      
+      <div class="btn">
+        <button type="button" name="button"class="btn-A">Selection A</button>
+        <button type="button" name="button"class="btn-B">Selection B</button>
+        <button type="button" name="button"class="btn-C">Selection C</button>
+        <button type="button" name="button"class="btn-D">Selection D</button>
+      </div>
     </div>
-<script type="text/javascript"></script>
+<script src="app.js"></script>
   </body>
 </html>
